...
      "isSystem": false,
      "isCustom": true,
      "options": [
       {
        "id": "0fe6eb0d-ace4-46e3-b3db-ce78351fbeb0",
        "value": "INVESTOR",
        "label": "Investor",
        "color": "green",
        "position": 0
       },
       {
        "id": "95b0d755-5c6a-42e4-9d48-19a3a1dca1af",
        "value": "PARTNER",
...
        "color": "blue",
        "position": 1
       },
       {
        "id": "4ceb9a16-ea62-4d82-89cf-1064603c97a5",
        "value": "ADVISOR",
        "label": "Advisor",
        "color": "purple",
        "position": 2
       },
       {
        "id": "d1b5763c-375b-4951-90e3-f41025f901ec",
        "value": "PRESS",
        "label": "Press",
        "color": "orange",
        "position": 3
       },
       {
        "id": "3cacb81d-fdce-4577-8bbb-b6a4ca9d160a",
        "value": "REGULATOR",
...
   },
   {
    "id": "8ba24324-2ee2-4408-9a0c-e7961e8b3a84",
    "nameSingular": "company",
    "namePlural": "companies",
    "labelSingular": "Company",
    "labelPlural": "Companies",
    "icon": null,
    "isActive": true,
    "isSystem": false,
    "isCustom": false,
    "labelIdentifierFieldMetadataId": "21a22b06-844b-49b0-9334-1f04a80f6e60",
    "imageIdentifierFieldMetadataId": null,
...
